fixed wrapping issue on education flexbox

--- a/portfolio_css.css
+++ b/portfolio_css.css
@@ -304,11 +304,9 @@ max-width: 100%;
 }
 #education-container {
     display: flex;
-    width: 100%;
+    
     flex-direction: column;
     background-color:#DCEDC8;
-   
-    margin:0 auto;
 }
 .navbar {
     margin:15px;
@@ -325,13 +323,13 @@ max-width: 100%;
 }
 
 .education {
-    margin: 25px auto;
     padding:15px;
     border: 2px solid black;
     border-radius: 5px;
-    font-size: 18px;
-    width:27%;
+    font-size: 3vw;
     text-align: center;
+    margin: 5%;
+
 }
 
 .flex-column-change {
@@ -340,14 +338,19 @@ max-width: 100%;
     width: 75%;
     justify-content:center;
 }
+.flex-column-change2 {
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    
+    margin:2%;
+    
+}
 
 .diploma { 
-    width: 500px;
-   
-    
-    padding-bottom: 10px;
-    margin: auto;
-    margin-top:15px;
+   width:500px;
+    margin: 2%;
+
 }
 
 #experience-container {
@@ -394,10 +397,11 @@ max-width: 100%;
     margin-top:15px;
     align-items: center;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .experience-titles {
-    margin:auto;
+    margin:1%;
     cursor: pointer;
     height:375px;
    
@@ -412,7 +416,7 @@ max-width: 100%;
     align-items: center;
     width:65%;
    min-height:375px;
-    margin:auto;
+    margin:1%;
     box-shadow:  4px 4px 15px;
     background-color: #d9d9d9;
 
@@ -523,7 +527,7 @@ max-width: 100%;
 .diploma-container {
     width:100%;
 }
-@media only screen and (max-width: 870px){
+@media only screen and (max-width: 1001px){
     .diploma{
         width:60%;
     }
@@ -553,6 +557,9 @@ max-width: 100%;
     .resumedetails h2{
         padding-bottom: 4%;
     }
+    .flex-change3{
+        flex-wrap: wrap;
+    }
 }
 
 
@@ -563,6 +570,9 @@ max-width: 100%;
     flex-wrap: wrap;
 
 }
-animate__animated.animate__hinge {
-  --animate-duration: 2s;
+.flex-change3{
+  display:flex;
+justify-content: center;
+    align-items: center;
+    
 }
